--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: script
 script:
+- mkdir redist && cd redist
 - wget https://github.com/jomof/cdep/releases/download/alpha-0.0.68/redist.zip
 - unzip redist.zip
+- cd ..
 - redist/cdep wrapper
 - ./cdep create hashes
 - cat cdep.sha256
