--- a/cdep.yml
+++ b/cdep.yml
@@ -4,3 +4,4 @@ dependencies:
 - compile: com.github.jomof:boost:1.0.63-rev12
 - compile: com.github.jomof:vectorial:0.0.0-rev5
 - compile: com.github.jomof:mathfu:1.0.2-rev3
+- compile: com.github.jomof:sdl2:2.0.5-rev8
