--- a/cdep.yml
+++ b/cdep.yml
@@ -5,3 +5,4 @@ dependencies:
 - compile: com.github.jomof:vectorial:0.0.0-rev5
 - compile: com.github.jomof:mathfu:1.0.2-rev3
 - compile: com.github.jomof:sdl2:2.0.5-rev8
+- compile: com.github.jomof:firebase/admob:2.1.3-rev3
