--- a/cdep.yml
+++ b/cdep.yml
@@ -6,4 +6,5 @@ dependencies:
 - compile: com.github.jomof:mathfu:1.0.2-rev3
 - compile: com.github.jomof:sdl2:2.0.5-rev8
 - compile: com.github.jomof:cmakeify:0.0.71
+- compile: com.github.jomof:yaml-cpp:0.5.3-rev7
 # - compile: com.github.jomof:firebase/admob:2.1.3-rev3
