--- a/cdep.yml
+++ b/cdep.yml
@@ -1,8 +1,8 @@
-builders: [cmake]
+builders: [cmake, cmakeExamples]
 dependencies:
-- compile: com.github.jomof:sqlite:3.16.2-rev21
-- compile: com.github.jomof:boost:1.0.63-rev12
-- compile: com.github.jomof:vectorial:0.0.0-rev6
+- compile: com.github.jomof:sqlite:3.16.2-rev24
+- compile: com.github.jomof:boost:1.0.63-rev14
+- compile: com.github.jomof:vectorial:0.0.0-rev9
 - compile: com.github.jomof:mathfu:1.0.2-rev3
 - compile: com.github.jomof:sdl2:2.0.5-rev10
 - compile: com.github.jomof:cmakeify:0.0.74
