--- a/cdep.yml
+++ b/cdep.yml
@@ -1,10 +1,11 @@
 builders: [cmake, cmakeExamples]
 dependencies:
-- compile: com.github.jomof:sqlite:3.16.2-rev24
-- compile: com.github.jomof:boost:1.0.63-rev14
-- compile: com.github.jomof:vectorial:0.0.0-rev9
-- compile: com.github.jomof:mathfu:1.0.2-rev3
-- compile: com.github.jomof:sdl2:2.0.5-rev10
-- compile: com.github.jomof:cmakeify:0.0.74
+- compile: com.github.jomof:sqlite:3.16.2-rev25
+- compile: com.github.jomof:boost:1.0.63-rev18
+- compile: com.github.jomof:vectorial:0.0.0-rev11
+- compile: com.github.jomof:mathfu:1.0.2-rev5
+- compile: com.github.jomof:sdl2:2.0.5-rev11
+- compile: com.github.jomof:cmakeify:0.0.81
 - compile: com.github.jomof:yaml-cpp:0.5.3-rev8 
-- compile: com.github.jomof:firebase/admob:2.1.3-rev3
+- compile: com.github.jomof:firebase/admob:2.1.3-rev5
+- compile: com.github.jomof:firebase/database:2.1.3-rev5
