--- a/cdep.yml
+++ b/cdep.yml
@@ -15,3 +15,4 @@ dependencies:
 - compile: com.github.jomof:sdl2:2.0.5-rev11
 - compile: com.github.jomof:yaml-cpp:0.5.3-rev10
 - compile: com.github.jomof:freetype:2.6.2-rev6
+- compile: com.github.jomof:tinydir:0.0.0-rev1
