--- a/cdep.yml
+++ b/cdep.yml
@@ -16,3 +16,4 @@ dependencies:
 - compile: com.github.jomof:yaml-cpp:0.5.3-rev10
 - compile: com.github.jomof:freetype:2.6.2-rev6
 - compile: com.github.jomof:tinydir:0.0.0-rev1
+- compile: com.github.jomof:protobuf:3.2.0-rev0
