--- a/cdep.yml
+++ b/cdep.yml
@@ -17,3 +17,4 @@ dependencies:
 - compile: com.github.jomof:freetype:2.6.2-rev6
 - compile: com.github.jomof:tinydir:0.0.0-rev1
 - compile: com.github.jomof:protobuf:3.2.0-rev0
+- compile: com.github.jomof:re2:17.3.1-rev0
