--- a/cdep.yml
+++ b/cdep.yml
@@ -17,7 +17,7 @@ dependencies:
 - compile: com.github.jomof:tinydir:0.0.0-rev7
 - compile: com.github.jomof:protobuf:3.2.0-rev0
 - compile: com.github.jomof:re2:17.3.1-rev13
-- compile: com.github.jomof:openssl:1.0.1-e-rev6
+#- compile: com.github.jomof:openssl:1.0.1-e-rev6
 - compile: com.github.jomof:stb/c_lexer:0.0.0-rev2
 - compile: com.github.jomof:stb/divide:0.0.0-rev2
 - compile: com.github.jomof:stb/dxt:0.0.0-rev2
